<resources>
    <string name="app_name">EmergencyAmulance</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="facebook_app_id">1639411012818943</string>
    <string name="fb_login_protocol_scheme">fb1639411012818943</string>
    <string name="title_activity_mapss">MapsActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="hint_username">Username or Phone Number</string>
    <string name="hint_pass">Password</string>
    <string name="txt_sign_up">SignUp Here!</string>
    <string name="txt_forget">Forget Password?</string>
    <string name="desc">Image Not loaded</string>
    <string name="chk_save_pass">Save Password</string>
    <string name="signup_here">Signup Here!</string>
    <string name="forget_password">Forget Password</string>
    <string name="save_password">Save Password</string>

    //RegistrationScreenStrings
    <string name="txt_or">OR</string>
    <string name="txt_agreement">By Clicking “Register”, you agree to Terms and Conditions and Privacy Policy.</string>
    <string name="fill_username">Username</string>
    <string name="fill_pass">Password</string>
    <string name="fill_Phone">Phone Number</string>
    <string name="fill_cnic">Email Address</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_map_screen">MapScreen</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="Edhi">Edhi</string>
    <string name="Chippa">Chippa</string>
    <string name="Aman">Aman</string>

    <!-- Bottom Nav Icons -->
    <string name="first">Normal</string>
    <string name="sec">Critical</string>
    <string name="third">Pediatric</string>
    <string name="fourth">DeadBody</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="about_us">About Us</string>
    <string name="how_it_works">How it works</string>
    <string name="policies">Policies</string>
    <string name="sign_out">Sign Out</string>


    <!--dialog strings-->
    <string name="farrukh_dilawar">Farrukh Dilawar</string>
    <string name="farrukhdilawar_pafkiet_com_pk">farrukhdilawar@pafkiet.com.pk</string>
    <string name="driver_is_late">Driver is late</string>
    <string name="mistakenly_booked">Mistakenly booked</string>
    <string name="patient_is_fine">Patient is fine</string>
    <string name="title_activity_maps">Map</string>
    <string name="resend">RESEND</string>
    <string name="change_number">CHANGE NUMBER</string>
    <string name="enter_the_code">Enter the Code</string>
    <string name="title_activity_verify_account">verify_account</string>
    <string name="_92_3341369120">+92-3341369120</string>
    <string name="verify">Verify</string>
    <string name="send">Send</string>
    <string name="request">Request</string>
    <string name="cancel">Cancel</string>
    <string name="dropoff_location">Choose Hospital/Clinic</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="crictical">Crictical</string>
    <string name="deadbody">DeadBody</string>
    <string name="routine">Routine</string>
    <string name="fare">Fare :</string>
    <string name="distance">Distance:</string>
    <string name="reasons_for_cancellation">REASONS FOR CANCELLATION</string>

    <string name="submit">SUBMIT</string>
    <string name="rate_your_experience">Rate Your Experience</string>
    <string name="share_your_experience_or_any_suggestion">Share your experience or Any suggestion...</string>
    <string name="rate_the_driving">Rate the Driving</string>
    <string name="m_a_d_a_d">M A D A D</string>
    <string name="confirm">CONFIRM</string>
    <string name="nearest_ambulance_is_6_min_away">Nearest Ambulance is 6 min Away!!</string>
</resources>
