<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/history" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_aboutus_black_24dp"
            android:title="@string/about_us" />
        <item
            android:id="@+id/nav_howitworks"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/how_it_works" />

        <item
            android:id="@+id/nav_policies"
            android:icon="@drawable/ic_policies_black_24dp"
            android:title="@string/policies"/>

        <item
            android:id="@+id/nav_signout"
            android:icon="@drawable/ic_signout_black_24dp"
            android:title="@string/sign_out"/>


    </group>

</menu>
