<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/num_verifybg"
    tools:context="com.example.user.emergencyamulance.Verifymobile">


    <EditText
        android:id="@+id/edit_num"
        android:layout_width="171dp"
        android:layout_height="39dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/_92_3341369120"
        android:inputType="textPersonName"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="200dp"
        android:layout_height="27dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="370dp"
        android:text="Enter the Phone Number"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/edit_num"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_code"
        android:layout_width="wrap_content"
        android:layout_height="39dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/enter_the_code"
        android:inputType="textPersonName"
        android:textAlignment="textStart"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btn_ver_resend"
        android:layout_width="209dp"
        android:layout_height="wrap_content"
        android:background="@drawable/verify_btn_bg"
        android:text="@string/resend"
        android:textColor="@color/white"
        tools:layout_editor_absoluteX="203dp"
        tools:layout_editor_absoluteY="604dp" />

    <Button
        android:id="@+id/btn_ver_verify"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@drawable/verify_btn_bg"
        android:text="@string/verify"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/btn_ver_resend"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_ver_resend"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_ver_send"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@drawable/verify_btn_bg"
        android:text="@string/send"
        android:textColor="@color/white"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/btn_ver_resend"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_ver_resend"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="243dp"
        android:layout_height="33dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="32dp"
        android:text="A verification code has been sent to your mobile number, please enter below:"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edit_code"
        app:layout_constraintTop_toBottomOf="@+id/edit_num" />
</android.support.constraint.ConstraintLayout>