<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialogbg"

    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:fontFamily="@font/average_sans"
        android:text="@string/reasons_for_cancellation"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="53dp"
        tools:targetApi="jelly_bean" />

    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="420dp"
        android:layout_height="135dp"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="174dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/average_sans"
            android:text="@string/mistakenly_booked"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:targetApi="jelly_bean" />

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="174dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/average_sans"
            android:text="@string/driver_is_late"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/radioButton5"
            app:layout_constraintTop_toBottomOf="@+id/radioButton5"
            tools:targetApi="jelly_bean" />

        <RadioButton
            android:id="@+id/radioButton6"
            android:layout_width="174dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/average_sans"
            android:text="@string/patient_is_fine"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/radioButton"
            app:layout_constraintTop_toBottomOf="@+id/radioButton"
            tools:targetApi="jelly_bean" />
</RadioGroup>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="152dp"
        android:layout_height="37dp"
        android:background="@drawable/btn_submit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/rg" />

</android.support.constraint.ConstraintLayout>
