<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.emergencyamulance.Controllers.FeedbackController">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:fontFamily="@font/alegreya_sans"
                android:gravity="center_vertical"
                android:text="FEEDBACK"
                android:textAlignment="center"
                android:textSize="22sp"
                android:textStyle="bold" />

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.CardView

        android:id="@+id/cardView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appBarLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="@color/topBar"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp">

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="18dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/average_sans"
                    android:text="@string/rate_your_experience"
                    android:textColor="@color/topBar"
                    android:textSize="21sp" />

                <RatingBar
                    android:id="@+id/rateExperience"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="20dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:numStars="5"
                    android:stepSize="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/average_sans"
                    android:text="@string/rate_the_driving"
                    android:textColor="@color/topBar"
                    android:textSize="21sp" />


                <RatingBar
                    android:id="@+id/rateDriver"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:focusable="true"
                    android:numStars="5"
                    android:stepSize="1" />

                <EditText
                    android:id="@+id/comments"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/average_sans"
                    android:gravity="left"
                    android:hint="@string/share_your_experience_or_any_suggestion"
                    android:includeFontPadding="true"
                    android:inputType="textMultiLine"
                    android:lines="4"
                    android:maxLines="7"
                    android:minLines="5"
                    android:scrollbars="vertical" />

                <Button
                    android:id="@+id/submit_feedback"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@color/topBar"
                    android:fontFamily="@font/average_sans"
                    android:text="@string/submit"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />


            </LinearLayout>


        </android.support.v7.widget.CardView>


    </android.support.v7.widget.CardView>


</RelativeLayout>
